# Projekt_zaliczeniowy

./: CMakeLists.txt  Core.hpp  Program.hpp  Projekt_zaliczeniowy.cpp  README.md  klasy.hpp
